--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </header>
 
 <body>
-  <section>
-    <h1>Fade</h1>
+  <h1>Fade</h1>
+  <section class="flex">
     <div class="fade-in">Fade In</div>
     <div class="fade-up">Fade Up</div>
     <div class="fade-down">Fade Down</div>
@@ -16,8 +16,18 @@
     <div class="fade-right">Fade Right</div>
   </section>
 
-  <section>
-    <h1>Flip</h1>
-    <div class="flip-down"></div>
+  <h1>Flip</h1>
+  <section class="flex">
+    <div class="box flip-down">Flip Down</div>
+    <div class="box flip-left">Flip Left</div>
+    <div class="box flip-left-top">Flip Left TOP</div>
+    <div class="box flip-right">Flip RIGHT</div>
+    <div class="box flip-right-top">Flip RIGHT TOP</div>
   </section>
+
+  <h1>Rotate</h1>
+  <div class="box rotateX">RotateX</div>
+  <div class="box rotateY">RotateY</div>
+  <div class="box rotate-left-z">Rotate LEFT Z</div>
+  <div class="box rotate-right-z">Rotate RIGHT Z</div>
 </body>
