--- a/index.html
+++ b/index.html
@@ -26,8 +26,16 @@
   </section>
 
   <h1>Rotate</h1>
-  <div class="box rotateX">RotateX</div>
-  <div class="box rotateY">RotateY</div>
-  <div class="box rotate-left-z">Rotate LEFT Z</div>
-  <div class="box rotate-right-z">Rotate RIGHT Z</div>
+  <section class="flex">
+    <div class="box rotateX">RotateX</div>
+    <div class="box rotateY">RotateY</div>
+    <div class="box rotate-left-z">Rotate LEFT Z</div>
+    <div class="box rotate-right-z">Rotate RIGHT Z</div>
+  </section>
+
+  <h1>Zoom</h1>
+  <section class="flex">
+    <div class="box zoom-in">Zoom In</div>
+    <div class="box zoom-out">Zoom Out</div>
+  </section>
 </body>
