--- a/index.html
+++ b/index.html
@@ -38,4 +38,9 @@
     <div class="box zoom-in">Zoom In</div>
     <div class="box zoom-out">Zoom Out</div>
   </section>
+
+  <h1>Blur</h1>
+  <section class="flex">
+    <div class="box blur">Blur</div>
+  </section>
 </body>
