--- a/index.html
+++ b/index.html
@@ -43,4 +43,9 @@
   <section class="flex">
     <div class="box blur">Blur</div>
   </section>
+
+  <h1>Smooth</h1>
+  <section class="flex">
+    <div class="box smooth">Blur</div>
+  </section>
 </body>
